--- a/tiantiPlan/Info.plist
+++ b/tiantiPlan/Info.plist
@@ -31,6 +31,7 @@
 			<array>
 				<string>idang</string>
 				<string>wxf649d878cb72f515</string>
+				<string>com.company.tianti</string>
 				<string>qqpayticket99</string>
 				<string>sinaweibohd</string>
 				<string>QQ41C4280E</string>
